<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.example.slawomirmakurat.ekoagromarket.user.Login">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <ImageView android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_log_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_log_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_reg"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_log_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_log_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/cancel_button_login"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:text="@string/cancel" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/login" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_new_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_margin="4dp"
                android:background="?android:attr/colorMultiSelectHighlight"
                android:text="@string/RegisterUser" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_user_facebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_margin="4dp"
                android:background="#6d84b4"
                android:text="@string/btn_user_facebook"
                android:textColor="#ffffff" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_user_google"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_margin="4dp"
                android:background="#e76c7f"
                android:text="@string/btn_user_google"
                android:textColor="#ffffff" />

        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
