<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/number_phone_register"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toBottomOf="@+id/post_codee_register"
        app:passwordToggleEnabled="true"
        app:layout_constraintRight_toRightOf="@+id/city_register">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneNumberRegister_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/number_phone"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/post_codee_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintLeft_toLeftOf="@+id/passwordRegister"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/postcodeRegister_editText"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:hint="@string/postcode"
            android:inputType="text|number|numberSigned|numberDecimal|phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_constraintLeft_creator="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginRegister_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/user_full_name_login"
            android:inputType="textEmailAddress|textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_register"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintLeft_toLeftOf="@+id/email_layout"
        app:layout_constraintRight_toRightOf="@+id/email_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordRegister_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/cancel_button_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:text="@string/cancel"
        app:layout_constraintRight_toLeftOf="@+id/register_button"
        app:layout_constraintTop_toTopOf="@+id/register_button" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/city_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintLeft_toRightOf="@+id/post_codee_register"
        app:layout_constraintRight_toRightOf="@+id/passwordRegister"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cityRegister_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/city_user"
            android:inputType="textAutoComplete" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintLeft_toLeftOf="@+id/password_register"
        app:layout_constraintRight_toRightOf="@+id/password_register"
        app:layout_constraintTop_toBottomOf="@+id/password_register"
        app:passwordToggleEnabled="true"
        tools:layout_constraintLeft_creator="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/checkPasswordRegister_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password2"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintLeft_toLeftOf="@+id/user_name"
        app:layout_constraintRight_toRightOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailRegister_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/number_phone_register"
        app:layout_constraintRight_toRightOf="@+id/number_phone_register" />

</android.support.constraint.ConstraintLayout>