<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_action_add_ad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.example.slawomirmakurat.ekoagromarket.drawer.DrawerAddAd"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/camera_imageButton"
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:scaleType="fitCenter"
                android:background="#e2e2e2"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/availability"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_season"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CheckBox_season" />

                <CheckBox
                    android:id="@+id/checkBox_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CheckBox_year" />

                <CheckBox
                    android:id="@+id/checkBox_ask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CheckBox_ask" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/titleAd_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Title"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/textAd_editText"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:ems="10"
                android:hint="@string/More"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/packing"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/packing_dec"
                    android:inputType="text"
                    android:layout_weight="0.41" />

            </LinearLayout>

            <Button
                android:id="@+id/seeAd_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Zobacz ogłoszenie przed dodaniem" />

            <Button
                android:id="@+id/addd_Ad_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dodaj ogłoszenie" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
